remove buttons from header, fix overlapping content by header

--- a/additional_style.css
+++ b/additional_style.css
@@ -186,4 +186,28 @@ body.dabody .da-field-buttons .form-actions {
       width: 75% !important;
       max-width: 750px !important;
     }
+
+    body.dabody .danavbar-title {
+      max-width: 80% !important;
+    }
+    
+    body.dabody .navbar .fixed-top {
+      position: sticky !important;
+    }
+
+    body.dabody #dabackbutton {
+      display: none !important;
+    }
+
+    body.dabody .nav .navbar-nav .damynavbar-right {
+      display: none !important;
+    }
+
+    body.dabody #danavbar-collapse {
+      display: none !important;
+    }
+
+    body.dabody #damobile-toggler {
+      display: none !important;
+    }
   }  
